macrotable/tests/ui/err/empty_input_value.stderr
error: expected value before comma
 --> tests/ui/err/empty_input_value.rs:4:28
  |
4 |     repeat!(#value in [one,, two] {
  |                            ^
